style: fix layout overflow

--- a/src/components/ui/blurry/blurry.module.css
+++ b/src/components/ui/blurry/blurry.module.css
@@ -1,5 +1,5 @@
 .blurry {
-  width: 100%;
+  width: 90%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -9,6 +9,10 @@
   overflow: hidden;
   filter: blur(75px);
   top: 0;
+
+  @media screen and (max-width: 450px) {
+    display: none;
+  }
 
   &.bottom {
     top: auto;
